welcome.lessons.welcome.array.array667.Array667.scala.error
array667:17: error: type mismatch;
 found   : Boolean
 required: Int
	return trouve;
               ^