welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	var taille: Int = nums.length;
	var next: Int = 0;
	var n: Int = 0;
	var trouve: Boolean = false;
	for(n <- 0 to taille - 1){
		if(nums(n) == 6 && next == 0){
			next = 1;
		}
		else if((nums(n) == 6 | nums(n) == 7) && next == 1){
			trouve = true;
		}
		else{
			next = 0;
		}
	}
	return trouve;
	
}
